# query-flow

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO  TODO.md  index.html  makefile  mkdocs.yml  pyproject.toml  query_flow.py  requirements.txt  requirements_dev.txt  rrequirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: dev.yml  release.yml  test.yml
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
examples/: 1. Sankey Explanation.ipynb  2. Detailed Example.ipynb  3. Identifying missing records..ipynb  3. Identifying missing records.ipynb  4. Identifying Ineffective operations.ipynb  5. Identifying duplications.ipynb  6. Identifying performance bottlenecks in a single query.ipynb  7. Identifying performance bottlenecks in a multiple queries.ipynb  8. WIP - optimiser bad estimations.ipynb  8. optimiser bad estimations.ipynb  9. TPC-H.ipynb  9. When QueryFlow won't help.ipynb  Identifying Ineffective operations.ipynb  Identifying duplications.ipynb  Identifying the operation that caused the return of zero records .ipynb  WIP-Identifying performance bottlenecks in a multiple queries.ipynb  WIP-Optimiser bad estimations.ipynb  When QueryFlow won't help.ipynb  bla.py
installation/: index.html
proposal/: Article.docx  Thesis.docx  ~$Thesis.docx
proposal/data/: detailed_example_execution_plan.json  fixed_identifying_duplications_query_flow_representation.csv  fixed_ineffective_operation_query_flow_representation.csv  ineffective_operation_query_flow_representation.csv  missing_records_query_flow_representation.csv
proposal/eval/: README.MD  all_queries_info.csv  benchmark_tpch.py  cleanup.sql  configurations.sql  create_TPC-H_benchmark.sh  find_optimizations.py  indexes.sql  indexes_removal.sql  optimizations.sql  optimized_queries.sql  queries.sql  single_query_info.csv
proposal/eval/data/baseline/: queries_stats.csv
proposal/eval/data/baseline_tpch-benchmark-scale-5/: all-queries.csv  all-slow-queries.csv  queries_stats.csv  query-1.csv  query-2.csv  query-3.csv  query-4.csv
proposal/eval/data/optimized/: queries_stats.csv
proposal/eval/data/optimized_tpch-benchmark-scale-5/: all-queries.csv  all-slow-queries.csv  queries_stats.csv  query-1.csv  query-2.csv  query-3.csv  query-4.csv
proposal/eval/data/optimized_with_queries_tpch-benchmark-scale-5-optimized/: all-queries.csv  all-slow-queries.csv  queries_stats.csv  query-1.csv  query-2.csv  query-3.csv  query-4.csv
proposal/eval/data/others/: Untitled.ipynb
proposal/figures/: detailed_execution_plan.json
query_flow/: __main__ .py  __main__.py  example_config.json  misc.py  query_flow.py
query_flow/datagen/: README.MD  create_imdb.py  create_tpch.py
query_flow/parsers/: __init__.py  athena_parser.py  cardinality.csv  db_parser.py  postgres_parser.py
query_flow/utils/: coloring_utils.py  misc.py
query_flow/vizualizers/: __init__.py  coloring_utils.py  config_parser.py  dataframe_sankey_vizualizer.py  query_vizualizer.py
search/: search_index.json
tests/parsers/: athena_parser_test.py  db_parser_test.py  postgres_parser_test.py  test_db_parser.py  test_postgres_parser.py
tests/parsers/data/athena/parse/: execution_plan_1.json  execution_plan_2.json  execution_plan_3.json  execution_plan_4.json  execution_plan_5.json  execution_plan_6.json  execution_plan_7.json  execution_plan_8.json
tests/parsers/data/athena/parse/detailed_example/: cardinality.csv  execution_plan.json
tests/parsers/data/detailed_example/: execution_plan.json
tests/parsers/data/identify_duplications/: execution_plan.json
tests/parsers/data/ineffective_operation/: execution_plan.json
tests/parsers/data/missing_records/: execution_plan.json
tests/parsers/data/multi_parse/: crap.csv
tests/parsers/data/multi_parse/multiple_queries/: cardinality.csv
tests/parsers/data/parse/ineffective_operation/: cardinality.csv  execution_plan.json
tests/parsers/data/postgres/multi_parse/multiple_queries/: cardinality.csv
tests/parsers/data/postgres/parse/detailed_example/: cardinality.csv
tests/parsers/data/postgres/parse/identify_duplications/: cardinality.csv  execution_plan.json
tests/parsers/data/postgres/parse/ineffective_operation/: cardinality.csv  execution_plan.json
tests/parsers/data/postgres/parse/missing_records/: cardinality.csv  execution_plan.json
tests/vizualizers/: query_vizualizer_test.py  test_query_vizualizer.py
usage/: index.html
