[metadata]
name = query_flow
version = 0.1.0,
description = A library for visualizing your Queries as Sankey-diagrams.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eyaltrabelsi/query-flow
author = Eyal Trabelsi
author_email = eyaltrabelsi@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    colour==0.1.5
    imdb-sqlite==0.1.3
    pandas==1.0.1
    plotly==4.5.4
    psycopg2==2.8.4
    sqlalchemy==1.3.13
    PyYAML==5.4.1
    tqdm==4.42.1
python_requires = >=3.7

[options.entry_points]
console_scripts =
    query-flow = query_flow.main:main

[options.packages.find]
exclude =
    tests*
    testing*
